--- a/package.json
+++ b/package.json
@@ -12,8 +12,16 @@
    "author": "",
    "license": "ISC",
    "dependencies": {
+      "bcrypt": "^5.1.1",
+      "dayjs": "^1.11.13",
+      "dotenv": "^16.4.7",
       "ejs": "^3.1.10",
-      "express": "^4.21.2"
+      "express": "^4.21.2",
+      "express-session": "^1.18.1",
+      "jsonwebtoken": "^9.0.2",
+      "luxon": "^3.5.0",
+      "mysql2": "^3.13.0",
+      "sequelize": "^6.37.6"
    },
    "devDependencies": {
       "nodemon": "^3.1.9"
